version/0.17/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.IntegerList.rst.txt
ansys.fluent.core.solver.flobject.IntegerList
=============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: IntegerList

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~IntegerList.__init__
      ~IntegerList.default_value
      ~IntegerList.get_attr
      ~IntegerList.get_attrs
      ~IntegerList.get_state
      ~IntegerList.is_active
      ~IntegerList.is_read_only
      ~IntegerList.max
      ~IntegerList.min
      ~IntegerList.print_state
      ~IntegerList.set_flproxy
      ~IntegerList.set_state
      ~IntegerList.to_python_keys
      ~IntegerList.to_scheme_keys
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~IntegerList.flproxy
      ~IntegerList.fluent_name
      ~IntegerList.obj_name
      ~IntegerList.parent
      ~IntegerList.path
   
   